--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--seo-->
-  <meta name="description" content="Miren los mejores mates de zona norte (Tigre),donde encontraran ademas diferentes tipos de complementos para mates y mucha infromacion">
-  <meta name="keywords" content="inicio-html, pagina, mates-de-todo-tipo, tigre-centro, Argentina, programacion, materas, bombillas, mate">
+  <meta name="description" content="Miren los mejores productos de  gimnasio de zona norte (Tigre),donde encontraran ademas diferentes tipos de complementos para gimnasio y ejercicio  y mucha infromacion">
+  <meta name="keywords" content="inicio-html, pagina, pesas-de-todo-tipo, tigre-centro, Argentina, programacion, discos, mancuernas, mejores precios">
+  <!--link toastify-->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <!--font awesome-->
   <script src="https://kit.fontawesome.com/e0f34b8123.js" crossorigin="anonymous"></script>
   <!--fuentes de google-->
@@ -19,6 +21,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
   <!--bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">  
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,23 +35,24 @@
   <!--CSS-->
   <link rel="stylesheet" href="estilos.css">
   <!--TITULO-->
-  <title>TCA-Mates-Inicio</title>
+  <title>gym-TCA</title>
 </head>
 
 <body>
 
   <!--nav bar-->
   <header class="navbarContainer">
+    
     <nav class="navbar">
       <p class="navarLogo">Shop</p>
-
       <p class="carrito" id="verCarrito">
         <i class="fa-solid fa-cart-shopping carritoLogo"></i>
         <span id="cantidadCarrito" class="cantidadDelCarrito"></span>
       </p>
-      
     </nav>
+
   </header>
+
 
   <div class="banner">
     <div class="bannerContainer">
@@ -62,9 +71,12 @@
   </main>
 
   <!--footer-->
-  <footer>
-
+  <footer class="footer">
   </footer>
+
+  <!--librerias-->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.14/dist/sweetalert2.all.min.js"></script>;
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
   <!--script del curso de js-->
   <script src="carpeta-js/productos.js"></script>
